--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-4">
         <img [src]="heroe.img" class="img-fluid" [alt]="heroe.nombre">
         <br><br>
-        <a routerLink="['/heroes']" class="btn btn-danger btn-block">Regresar a héroes</a>
+        <a [routerLink]="['/heroes']" class="btn btn-danger btn-block">Regresar a héroes</a>
     </div>
     <div class="col-md-8">
         <h3>{{ heroe.nombre }}</h3>
