--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -19,9 +19,8 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Buscar héroe" aria-label="Search" (keyup.enter)="buscarHeroe(buscarTexto.value)" #buscarTexto>
-            <button (click) = "buscarHeroe(buscarTexto.value) "
-            class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
+            <input class="form-control mr-sm-2" type="text" placeholder="Buscar héroe" aria-label="Search" (keyup)="buscarHeroe(buscarTexto.value)" #buscarTexto>
+            <button (click)="buscarHeroes(buscarTexto.value) " class="btn btn-outline-success my-2 my-sm-0" type="button">Buscar</button>
         </form>
     </div>
 </nav>
